# pymcu-rp2040-toolchain

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/workflows/: build-wheels.yml  smoke-test.yml
scripts/: stage-llvm.sh
src/pymcu_arm_toolchain/: __init__.py  __main__.py  _fetch.py
src/pymcu_rp2040_toolchain/: __init__.py  __main__.py  _fetch.py
src/pymcu_rp2040_toolchain/_bin/: .gitkeep
src/pymcu_rp2040_toolchain/_lib/: .gitkeep
tests/: test_toolchain_smoke.py
