[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-rp2040-toolchain"
version = "19.1.7"
description = "Vendored LLVM toolchain (opt/llc/llvm-mc/ld.lld/llvm-objcopy) for the PyMCU RP2040 backend"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["pymcu", "rp2040", "llvm", "toolchain", "cortex-m0plus"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Embedded Systems",
]

[project.urls]
Homepage = "https://github.com/begeistert/pymcu"
"Bug Tracker" = "https://github.com/begeistert/pymcu-rp2040-toolchain/issues"

# The package version tracks the bundled LLVM version (matches the
# pymcu-avr-toolchain convention). Keep [project].version in sync with
# LLVM_VERSION in src/pymcu_rp2040_toolchain/__init__.py.
[project.scripts]
pymcu-rp2040-toolchain-info = "pymcu_rp2040_toolchain.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu_rp2040_toolchain"]
# LLVM tools + shared libs are staged into bin/ and lib/ by hatch_build.py
# (from RP2040T_TOOLCHAIN_DIR) at wheel-build time and force-included here.
artifacts = [
    "src/pymcu_rp2040_toolchain/bin/**",
    "src/pymcu_rp2040_toolchain/lib/**",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["src/", "hatch_build.py", "scripts/", "README.md", "LICENSE"]
