[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-arm-toolchain"
version = "22.1.7"
description = "Vendored LLVM toolchain (opt/llc/llvm-mc/ld.lld/llvm-objcopy) for the PyMCU ARM backend"
readme = "README.md"
authors = [
    { name = "Iván Montiel Cardona", email = "contact@pymcu.org" }
]
requires-python = ">=3.11"
# The packaging code is MIT. The bundled LLVM binaries are
# Apache-2.0 WITH LLVM-exception (permissive, NOT copyleft/GPL).
# See LICENSE for the full text and a plain-language explanation.
license = { text = "MIT AND Apache-2.0 WITH LLVM-exception" }
license-files = ["LICENSE"]
keywords = ["pymcu", "arm", "llvm", "toolchain", "cortex-m", "cortex-m0plus"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Embedded Systems",
    "Topic :: Software Development :: Compilers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/PyMCU/pymcu-arm-toolchain"
Repository = "https://github.com/PyMCU/pymcu-arm-toolchain"
"Bug Tracker" = "https://github.com/PyMCU/pymcu-arm-toolchain/issues"

# The package version tracks the bundled LLVM version (matches the
# pymcu-avr-toolchain convention). Keep [project].version in sync with
# LLVM_VERSION in src/pymcu_arm_toolchain/__init__.py.
[project.scripts]
pymcu-arm-toolchain-info = "pymcu_arm_toolchain.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/pymcu_arm_toolchain"]
# LLVM tools + shared libs are staged into bin/ and lib/ by hatch_build.py
# (from ARMT_TOOLCHAIN_DIR) at wheel-build time and force-included here.
artifacts = [
    "src/pymcu_arm_toolchain/bin/**",
    "src/pymcu_arm_toolchain/lib/**",
]

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = ["src/", "hatch_build.py", "scripts/", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
